data/derived/fa15/progs/unify/prog2601.ml.out
Characters 63-68:
  | _ -> (f,b)
         ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
